tests/negative/typechecker_bad3.sp
(* Call before definition *)

Var: String = "Hello";

main: Int () {

    test1();

    return 0;
}